Update angellist link

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 								<li class="icon solid fa-envelope">kevinlu.rea@gmail.com</li>
 								<li class="icon brands fa-linkedin"><a href="https://www.linkedin.com/in/kevin-lu-96b294191/">LinkedIn</a></li>
 								<li class="icon brands fa-github"><a href="https://github.com/kluAA">Github</a></li>
-								<li class="icon brands fa-angellist"><a href="#">AngelList</a></li>
+								<li class="icon brands fa-angellist"><a href="https://angel.co/u/kevin-lu-45">AngelList</a></li>
 							</ul>
 							
 						</div>
